storm: allow to override CBFS_SIZE configuration setting
The default CBFS size configuration setting is incorrect in case of
Qualcomm SOC targets, as the coreboot blob is much smaller than the
actual bootprom. Note that this size also must match the board fmap
defined in the appropriate depthcharge board directory.

BUG=chromium:394068
TEST=manual
   . previously failing to boot coreboot image does not fail to load
     depthcharge anymore.

Change-Id: I1b178970b1deee05705490542e4a0c57500379dd
Signed-off-by: Vadim Bendebury <vbendeb@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/208146
Reviewed-by: David Hendricks <dhendrix@chromium.org>

--- a/src/soc/qualcomm/Kconfig
+++ b/src/soc/qualcomm/Kconfig
@@ -1,1 +1,9 @@
 source src/soc/qualcomm/ipq806x/Kconfig
+
+config CBFS_SIZE
+	hex "Size of CBFS filesystem in ROM"
+	default ROM_SIZE
+	help
+	  CBFS size needs to match the size of memory allocated to the
+	  coreboot blob elsewhere in the system. Make sure this config option
+	  is fine tuned in the board config file.
