--- a/src/soc/nvidia/tegra132/Makefile.inc
+++ b/src/soc/nvidia/tegra132/Makefile.inc
@@ -55,6 +55,7 @@ ramstage-y += ../tegra/gpio.c
 ramstage-y += ../tegra/i2c.c
 ramstage-y += ../tegra/pinmux.c
 ramstage-y += ramstage.c
+ramstage-y += mmu_operations.c
 ramstage-$(CONFIG_CONSOLE_SERIAL_UART) += uart.c
 
 INCLUDES += -Isrc/soc/nvidia/tegra132/include/
